# cpp-homeworks-UniBonn-WS2024

./: .clang-format  .clang-tidy  .gitignore  README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  Makefile  build.sh
homework_2/: CMakeLists.txt
homework_2/task_1/: CMakeLists.txt
homework_2/task_1/include/: gng.hpp
homework_2/task_1/src/: gng.cpp  main.cpp
homework_2/task_2/: CMakeLists.txt  task_2
homework_2/task_2/src/: main.cpp
homework_3/: CMakeLists.txt
homework_3/api/: CMakeLists.txt  html_writer.cpp  html_writer.hpp  image_browser.cpp
homework_3/homework_3/: homework_3.h
homework_3/interface/: CMakeLists.txt
homework_3/src/: CMakeLists.txt
homework_4/: CMakeLists.txt
homework_4/core/: CMakeLists.txt  ipb_algorithm.cpp  ipb_algorithm.hpp  ipb_container.cpp  ipb_container.hpp
homework_4/interface/: CMakeLists.txt  homework_4.h
homework_4/tests/: CMakeLists.txt
homework_5/: CMakeLists.txt
homework_5/core/: CMakeLists.txt  convert_dataset.cpp  convert_dataset.hpp  serialize.cpp
homework_5/interface/: CMakeLists.txt  homework_5.h
homework_6/: CMakeLists.txt
homework_6/core/: CMakeLists.txt  image.cpp  image.hpp  io_tools.cpp  io_tools.hpp
homework_6/interface/: CMakeLists.txt  homework_6.h
homework_7/: CMakeLists.txt
homework_7/core/: CMakeLists.txt  convert_dataset.cpp  convert_dataset.hpp  kmeans.cpp  kmeans.hpp  serialize.cpp  serialize.hpp
homework_7/interface/: CMakeLists.txt  homework_7.h
homework_8/: CMakeLists.txt
homework_8/core/: CMakeLists.txt  image.cpp  image.hpp  io_strategies.cpp  io_strategies.hpp
homework_8/interface/: CMakeLists.txt  homework_8.h
homework_9/: CMakeLists.txt
homework_9/core/: CMakeLists.txt  bow_dictionary.cpp  bow_dictionary.hpp  histogram.cpp  histogram.hpp
homework_9/interface/: CMakeLists.txt  homework_9.h
